--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@ body {
   font-family: 'Poppins', sans-serif; 
   margin: 0;
   padding: 0;
-  background: linear-gradient(to right, #e5d4f5, #cbb8f0); 
+  background: linear-gradient(to right,  #e7ceff, #2e2437);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,7 +25,7 @@ body {
 }
 
 header {
-  background-color: linear-gradient(to right, #e5d4f5, #cbb8f0); 
+  background-color: linear-gradient(to right,  #e7ceff, #2e2437); 
   color: black;
   width: 100%;
   position: relative; 
